--- a/package.json
+++ b/package.json
@@ -2,10 +2,25 @@
   "name": "tt-node",
   "version": "0.1.0",
   "private": true,
+  "description": "",
+  "main": "app2.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "DEBUG=app2 node app2.js"
+  },
+  "author": {
+    "name": "JO"
+  },
+  "license": "GPL",
   "dependencies": {
+    "bootstrap": "4.1.3",
+    "chalk": "2.4.1",
+    "debug": "4.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "morgan": "1.9.1",
+    "popper": "1.0.1",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
     "url": "^0.11.0"
