--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "app2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app2 nodemon app2.js",
+    "start": "DEBUG=app2,app2:* nodemon app2.js",
     "lint": "eslint app2.js",
     "lintfix": "eslint app2.js --fix"
   },
@@ -15,14 +15,19 @@
   },
   "license": "GPL",
   "dependencies": {
+    "body-parser": "1.18.3",
     "bootstrap": "4.1.3",
     "chalk": "2.4.1",
+    "cookie-parser": "1.4.3",
     "debug": "4.0.1",
     "ejs": "2.6.1",
     "express": "4.16.3",
+    "express-session": "1.15.6",
     "jquery": "^3.3.1",
+    "mongodb": "3.1.10",
     "morgan": "1.9.1",
     "nodemon": "1.18.4",
+    "passport": "0.4.0",
     "popper": "1.0.1",
     "pug": "2.0.3",
     "redis": "^2.8.0",
