--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "app2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app2,app2:* nodemon app2.js",
+    "start": "DEBUG=app2:* nodemon app2.js",
     "lint": "eslint app2.js",
     "lintfix": "eslint app2.js --fix"
   },
@@ -15,6 +15,7 @@
   },
   "license": "GPL",
   "dependencies": {
+    "axios": "0.18.0",
     "body-parser": "1.18.3",
     "bootstrap": "4.1.3",
     "chalk": "2.4.1",
@@ -28,11 +29,13 @@
     "morgan": "1.9.1",
     "nodemon": "1.18.4",
     "passport": "0.4.0",
+    "passport-local": "1.0.0",
     "popper": "1.0.1",
     "pug": "2.0.3",
     "redis": "^2.8.0",
     "socket.io": "2.1.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "xml2js": "0.4.19"
   },
   "devDependencies": {
     "eslint": "5.6.0",
